tests/ui/consts/miri_unleashed/drop.stderr
error[E0080]: calling non-const function `<NotConstDestruct as Drop>::drop`
  --> $DIR/drop.rs:23:1
   |
LL | };
   | ^ evaluation of `TEST_BAD` failed inside this call
   |
note: inside `drop_in_place::<NotConstDestruct> - shim(Some(NotConstDestruct))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/drop.rs:22:9
   |
LL |     let _v: NotConstDestruct = NotConstDestruct;
   |         ^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
